fix some spacings in CSS for the analysis page

--- a/src/main.scss
+++ b/src/main.scss
@@ -10,7 +10,11 @@ h3 {
 }
 
 h1 {
-  margin-bottom: 48px;
+  margin-bottom: 0.8rem;
+}
+h2,
+h3 {
+  margin-bottom: 3rem;
 }
 
 section {
@@ -22,34 +26,35 @@ section {
 }
 
 .game-screen {
-  margin-top: 5vh;
+  margin-top: max(2rem, 5vh);
 }
 
 .game-board {
+  margin-top: 1rem;
   display: flex;
   flex-direction: row;
 }
 
 .move-list {
-  min-width: 3em;
-  margin: 0 1em;
+  min-width: 3rem;
+  margin: 0 1rem;
   font-family: -apple-system, BlinkMacSystemFont, 'Trebuchet MS', 'Lucida Sans Unicode',
     'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-weight: 400;
 }
 
 .board-buttons {
-  padding: 1em 0;
+  padding: 1rem 0;
   display: flex;
   justify-content: space-between;
 
   * {
-    font-size: 1.5em;
-    padding: 0.5em;
+    font-size: 1.5rem;
+    padding: 0.5rem;
     color: black;
   }
 }
 
 .footer {
-  margin-top: 4em;
+  margin-top: 4rem;
 }
